# CPP-ConsoleStream

./: CMakeLists.txt  README.md
include/kani/: console_stream.hpp
test/: main.cpp
